@@ -5,13 +5,26 @@ import net.minecraft.block.state.IBlockState;
 import net.minecraft.util.IStringSerializable;
 
 public enum Metal implements IStringSerializable {
-	IRON(-1, 0),
-	COPPER(0, (200 << 16) + (75 << 8) + 40),
-	TIN(1, (220 << 16) + (225 << 8) + 240),
-	GOLD(-1, 0);
+	IRON(0),
+	COPPER((200 << 16) + (75 << 8) + 40),
+	TIN((185 << 16) + (210 << 8) + 230),
+	GOLD(0);
 
 	public static Metal[] ORES = new Metal[] {COPPER, TIN};
 	public static final PropertyEnum METAL_ORE = PropertyEnum.create("metal", Metal.class, ORES);
+
+	public static Metal[] INGOTS = new Metal[] {COPPER, TIN};
+
+	static {
+		int index = 0;
+		for (Metal metal : ORES) {
+			metal.oreIndex = index++;
+		}
+		index = 0;
+		for (Metal metal : INGOTS) {
+			metal.ingotIndex = index++;
+		}
+	}
 
 	public static Metal get(int index) {
 		return values()[index];
@@ -29,11 +42,15 @@ public enum Metal implements IStringSerializable {
 		return ORES[oreIndex];
 	}
 
+	public static Metal getIngot(int ingotIndex) {
+		return INGOTS[ingotIndex];
+	}
+
 	private int oreIndex;
+	private int ingotIndex;
 	private int color;
 
-	private Metal(int oreIndex, int color) {
-		this.oreIndex = oreIndex;
+	private Metal(int color) {
 		this.color = color;
 	}
 
@@ -48,6 +65,10 @@ public enum Metal implements IStringSerializable {
 
 	public int getOreIndex() {
 		return oreIndex;
+	}
+
+	public int getIngotIndex() {
+		return ingotIndex;
 	}
 
 	public int getColor() {
