@@ -1,3 +1,4 @@
     * Add enchantment "Area" that makes tools dig multiple blocks at the same time.
     * Add assembler block that can automatically craft recipes.
     * Add copper and tin ore.
+    * Add copper and tin ingots.
